# GraphSlim

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  efficiency.md  gcond_agent_transduct.py  install_torch_sparse.sh  mloss_graphslim_draft.tex  pyproject.toml  setup.py  structure.md  train_coarsen.py  train_coreset.py  train_coreset_induct.py  train_gcond.py  train_gcond_transduct.py  utils.py  utils_graphsaint.py
Benchmark/: graph_property_no_structure.py  run_eval.py  train_all.py
Benchmark/scripts/: data_initialization.sh  graph_property_preservation.sh  nas.sh  performance.sh  robustness.sh  scalability.sh  transferability.sh
benchmark/: README.md  dd_plot.py  graph_property.py  graph_property_no_structure.py  requirements.txt  run_cross_arch.py  run_eval.py  run_nas.py  train_all.py
benchmark/scripts/: data_initialization.sh  graph_property_preservation.sh  nas.sh  performance.sh  robustness.sh  scalability.sh  transferability.sh
coarsening/: coarsening_utils.py  graph_lib.py  graph_utils.py
condensation/: __init__.py  gcond_agent.py  gcond_agent_induct.py  gcond_agent_transduct.py
dataset/: __init__.py  utils.py  utils_graphsaint.py
docs/: conf.py  index.rst  installation.md  quickstart.md  requirements.txt  requirements_torch.txt
docs/API/: evaluation.md  index.rst
docs/packageref/: dataset.md  method.md
docs/source/: graphslim.coarsening.rst  graphslim.condensation.rst  graphslim.dataset.rst  graphslim.evaluation.rst  graphslim.models.rst  graphslim.rst  graphslim.sparsification.rst  modules.rst
evaluation/: test_other_arcs.py  tester_other_arcs.py
examples/: train_coarsen.py  train_coreset.py  train_gcond.py  train_node_sparsification.py
graphslim/: .gitignore  README.md  compat.py  condense_with_attack.py  config.py  configs.py  dd_plot.py  graph_property.py  graph_property_no_structure.py  nas_eval.py  requirements.txt  requirements_torch1+.txt  requirements_torch2+.txt  run_cross_arch.py  run_eval.py  run_main.sh  run_nas.py  setup.py  test.py  tracking.py  train_all.py  train_coarsen.py  train_coreset.py  train_gcond.py  utils.py  visualization.py
graphslim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
graphslim/coarsening/: __init__.py  affinity_gs.py  algebraic_jc.py  averaging.py  cluster.py  clustering.py  clusteringagg.py  coarsening_agent.py  coarsening_base.py  coarsening_utils.py  heavy_edge.py  (+8 more)
interface/: requirements.txt  vis_graphslim.py
models/: gat.py  gcn.py  mycheby.py
tests/: test_compat.py  test_reduction_registry.py  test_tracking.py  test_visualization.py
(+337 files in other folders)
