[project]
name = "graphslim"
version = "1.2.1"
description = "Slimming the graph data for graph learning"
authors = [
    {name = "Rockcor", email = "jshmhsb@gmail.com"},
]
license = "MIT"
requires-python = ">=3.9, <=3.11"
dependencies = [
    "click",
    "deeprobust",
    "gdown",
    "networkit",
    "networkx",
    "numpy",
    "ogb",
    "PyGSP",
    "scikit_learn",
    "scipy",
    "sortedcontainers",
    "torch",
    "torch_geometric",
    "tqdm",
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dgl = ["dgl"]
tracking = ["wandb"]
viz = ["matplotlib", "networkx", "pyvis", "streamlit"]
test = ["pytest"]
dev = ["build", "pytest", "twine", "wandb"]

[project.scripts]
graphslim-train = "graphslim.train_all:main"
graphslim-visualize = "graphslim.visualization:main"

[tool.setuptools.packages.find]
include = ["graphslim*"]
exclude = ["benchmark*", "checkpoints*", "docs*", "examples*", "figures*", "geom_buffer*", "interface*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
